Adds 2016-01-19 and fixes navigation

--- a/blog/2016-01/2016-01-18.md
+++ b/blog/2016-01/2016-01-18.md
@@ -9,3 +9,5 @@ I dag ble prosjektforslaget offisielt godkjent av porteføljestyret. Yay!
 
 ## Moduler
 - tfk-is-hemmelig-adresse nesten ferdig
+
+[Forsiden](../index.md)
