Adds structure for blog

--- a/blog/2016-01/2016-01-08.md
+++ b/blog/2016-01/2016-01-08.md
@@ -1,7 +1,6 @@
-# 08. Januar 2016 - Gevinstverksted
+# 08. Januar 2016
 
-I dag var det gevinstverksted for Louie.
-I et gevinstverksted kartlegger man arbeidsprosesser fra start til slutt.
-Utfordringer og forbedringspunkter skal identifiseres.
-Til sist sitter man med et veldig godt overblikk over alt og alle som er involvert og så starter forbedringsarbdeidet.
+I dag var det gevinstverksted/arbeidsprosessanalyse for Louie.
+Det var forsåvidt også starten på prosjektet som skal være i produksjon etter vinterferien.
 
+[Forsiden](../index.md) - [11. januar 2016 ->](2016-01-11.md)
