Updates blog navigation

--- a/blog/2016-01/2016-01-18.md
+++ b/blog/2016-01/2016-01-18.md
@@ -10,4 +10,4 @@ I dag ble prosjektforslaget offisielt godkjent av porteføljestyret. Yay!
 ## Moduler
 - tfk-is-hemmelig-adresse nesten ferdig
 
-[<- 15. januar 2016](2016-01-15.md) [Forsiden](../index.md) - [19. januar 2016 ->](2016-01-19.md)
+[<- 15. januar 2016](2016-01-15.md)  |  [Forsiden](../index.md)  |  [19. januar 2016 ->](2016-01-19.md)
