--- a/blog/2016-01/2016-01-08.md
+++ b/blog/2016-01/2016-01-08.md
@@ -3,4 +3,4 @@
 I dag var det gevinstverksted/arbeidsprosessanalyse for Louie.
 Det var forsåvidt også starten på prosjektet som skal være i produksjon etter vinterferien.
 
-[Forsiden](../index.md) - [11. januar 2016 ->](2016-01-11.md)
+[Forsiden](../index.md)  |  [11. januar 2016 ->](2016-01-11.md)
