--- a/blog/2016-01/2016-01-11.md
+++ b/blog/2016-01/2016-01-11.md
@@ -1,3 +1,3 @@
 # 11 januar 2016
 
-[<- 08. januar 2016](2016-01-08.md) [Forsiden](../index.md) - [12. januar 2016 ->](2016-01-12.md)
+[<- 08. januar 2016](2016-01-08.md)  |  [Forsiden](../index.md)  |  [12. januar 2016 ->](2016-01-12.md)
