--- a/blog/2016-01/2016-01-12.md
+++ b/blog/2016-01/2016-01-12.md
@@ -1,3 +1,3 @@
 # 12. januar 2016
 
-[<- 11. januar 2016](2016-01-11.md) [Forsiden](../index.md) - [13. januar 2016 ->](2016-01-13.md)
+[<- 11. januar 2016](2016-01-11.md)  |  [Forsiden](../index.md)  |  [13. januar 2016 ->](2016-01-13.md)
