--- a/blog/2016-01/2016-01-13.md
+++ b/blog/2016-01/2016-01-13.md
@@ -1,3 +1,3 @@
 # 13. januar 2016
 
-[<- 12. januar 2016](2016-01-12.md) [Forsiden](../index.md) - [14. januar 2016 ->](2016-01-14.md)
+[<- 12. januar 2016](2016-01-12.md)  |  [Forsiden](../index.md)  |  [14. januar 2016 ->](2016-01-14.md)
