--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -8,4 +8,4 @@
 - Startet på beskrivelse og regelsett for Roy
 - tfk-is-hemmelig-adresse ble ferdig
 
-[<- 18. januar 2016](2016-01-18.md) - [Forsiden](../index.md)
+[<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)
