--- a/blog/2016-01/2016-01-15.md
+++ b/blog/2016-01/2016-01-15.md
@@ -1,3 +1,14 @@
 # 15. januar 2016
 
+I dag hadde vi besøk i utviklerteamet. Jørgen Johansen tok en dags avbrekk fra studiene og hang med oss hele dagen.
+Ville jo være uhøflig å ikke gi gjestene noe å gjøre så han fikk i oppgave implementere Telemark fylkeskommunes profil i louie-web.
+
+## Web
+- Tfk profil på plass
+
+## Moduler
+- [node-dsf](https://github.com/telemark/node-dsf) ble opprettet
+ 
+
+
 [<- 14. januar 2016](2016-01-14.md)  |  [Forsiden](../index.md)  |  [18. januar 2016 ->](2016-01-18.md)
