--- a/blog/2016-01/2016-01-12.md
+++ b/blog/2016-01/2016-01-12.md
@@ -1,3 +1,6 @@
 # 12. januar 2016
 
+## Web
+- [louie-web](https://github.com/telemark/louie-web) ble opprettet
+
 [<- 11. januar 2016](2016-01-11.md)  |  [Forsiden](../index.md)  |  [13. januar 2016 ->](2016-01-13.md)
