--- a/blog/2016-01/2016-01-13.md
+++ b/blog/2016-01/2016-01-13.md
@@ -1,3 +1,8 @@
 # 13. januar 2016
 
+## Web
+
+## Moduler
+- [Laurentius](https://github.com/telemark/laurentius) ble opprettet
+
 [<- 12. januar 2016](2016-01-12.md)  |  [Forsiden](../index.md)  |  [14. januar 2016 ->](2016-01-14.md)
