--- a/blog/2016-01/2016-01-12.md
+++ b/blog/2016-01/2016-01-12.md
@@ -3,4 +3,7 @@
 ## Web
 - [louie-web](https://github.com/telemark/louie-web) ble opprettet
 
+## Moduler
+- [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) ble opprettet
+
 [<- 11. januar 2016](2016-01-11.md)  |  [Forsiden](../index.md)  |  [13. januar 2016 ->](2016-01-13.md)
