--- a/blog/2016-01/2016-01-14.md
+++ b/blog/2016-01/2016-01-14.md
@@ -1,3 +1,11 @@
 # 14. januar 2016
 
+Skrive, skrive, skrive, skrive.
+Mye frem og tilbake for å få ferdig prosjektforslaget som skal leveres.
+Det kom i land :-)
+
+## Web
+
+## Moduler
+
 [<- 13. januar 2016](2016-01-13.md)  |  [Forsiden](../index.md)  |  [15. januar 2016 ->](2016-01-15.md)
