--- a/blog/2016-01/2016-01-18.md
+++ b/blog/2016-01/2016-01-18.md
@@ -2,6 +2,12 @@
 
 I dag ble prosjektforslaget offisielt godkjent av porteføljestyret. Yay!
 
+På webfronten oppdaget vi at de siste utgavene ikke hadde blitt bygget på DockerHub. Det ble litt leting hit og dit før følgende teori ble utformet: Det har vært endringer i tap slik at denne modulen nå også henter via GitHub og ikke bare npm.
+
+Kortsiktig løsning: Bytte base-image til det offisielle fra node
+
+Endelig løsning: Fikse Dockerfile så den installerer Git som en del av oppgavene.
+
 ## Web
 - Løsning for sticky footer kom på plass
 - Et par nye avkrysningsbokser dukket opp
