--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -1,5 +1,8 @@
 # 19. januar 2016
 
+Fikk endelig svar fra Fronter i dag. De kunne ikke påta seg annen utvikling enn forbedring og feilretting på eksisterende funksjonalitet.
+Hadde strengt tatt glemt vi ventet på svar.
+
 ## Web
 - Sort skrift på skjema
 - Fikset padding på innloggingsboksen
