--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -9,6 +9,6 @@ Hadde strengt tatt glemt vi ventet på svar.
 
 ## Moduler
 - Startet på beskrivelse og regelsett for Roy
-- tfk-is-hemmelig-adresse ble ferdig
+- [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) ble ferdig og publisert til [npm](https://www.npmjs.com/package/tfk-is-hemmelig-adresse)
 
 [<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)
