--- a/blog/2016-01/2016-01-12.md
+++ b/blog/2016-01/2016-01-12.md
@@ -1,5 +1,11 @@
 # 12. januar 2016
 
+Sender ny mail til Fronter og spør om hva det vil kostet å få laget en slik løsning vi ønsker oss.
+Det vil si at vi henter ut produserte varsler via API, eller at det lages en trigger som dytter data inn til vårt distribusjonsledd.
+
+For å ikke komme bakpå starter vi arbeidet med vårt eget webgrensesnitt for produskjon av varsler.
+Om det skal være mulig å komme i mål må vi skrelle alt helt inn til benet.
+
 ## Web
 - [louie-web](https://github.com/telemark/louie-web) ble opprettet
 
