--- a/blog/2016-01/2016-01-14.md
+++ b/blog/2016-01/2016-01-14.md
@@ -4,7 +4,12 @@ Skrive, skrive, skrive, skrive.
 Mye frem og tilbake for å få ferdig prosjektforslaget som skal leveres.
 Det kom i land :-)
 
+Første utgave av webgrensesnittet for Louie blir lansert for prosjektgruppen.
+Tanken er at dette skal gjøre det enklere å diskutere omkring saksgang og funksjonalitet.
+
 ## Web
+- [louie-web](https://github.com/telemark/louie-web) settes opp for automatic build på [hub.docker.com](https://hub.docker.com/r/telemark/louie-web/)
+- [louie-web](https://github.com/telemark/louie-web) prototypen lanseres for prosjektgruppen
 
 ## Moduler
 
