--- a/blog/2016-01/2016-01-11.md
+++ b/blog/2016-01/2016-01-11.md
@@ -2,7 +2,11 @@
 
 Oppsummeringsmøte av gevinstverkstedet.
 
+Sender mail til Fronter hvor vi spør om det er mulig å får varslene ut derfra via API eller trigger.
+Får svar sent på kvelden at det ikke finnes API eller trigger for noe slikt.
+
 ## Moduler
 - Forker [form-data](https://github.com/telemark/form-data)
+- [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) opprettes
 
 [<- 08. januar 2016](2016-01-08.md)  |  [Forsiden](../index.md)  |  [12. januar 2016 ->](2016-01-12.md)
