--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -10,6 +10,16 @@ Tok tak i Roy igjen. I alle fall nok tak til å starte på beskrivelse og regels
 Det kan tenkes at saksbehandlingsmodulen egentlig skal være omkringliggende og så ligger Roy og Laurentius innbakt i saksbehandlerkjeden.
 Prøver å få til litt tavletid med @maccyber så vi kan tegne opp løpet for varsler, Roy og Laurentius... samtidig som vi har et blikk over til skoleskyss og ser på hva vi lærte av den jobben
 
+Tavletid unnagjort
+
+![Tavletid!](../images/2016-01-19-plan.jpg)
+
+Oversatt fra kråketærne:
+- Roy og Laurentius blir separate moduler
+- Saksbehandlingsmodulen for varsler vil innneholde Roy og Laurentius
+- Saksbehandlingsmodulen for skoleskyss skrive om ved neste mulighet
+- Det hadde vært digg å ha saksbehandlingsmodulen i Docker
+
 ## Web
 - Sort skrift på skjema
 - Fikset padding på innloggingsboksen
