--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -20,6 +20,15 @@ Oversatt fra kråketærne:
 - Saksbehandlingsmodulen for skoleskyss skrive om ved neste mulighet
 - Det hadde vært digg å ha saksbehandlingsmodulen i Docker
 
+Hadde minimøte med [@vavaen](https://github.com/vavaen)
+Vi kikket litt på malene og forsøkte å forenkle så mye som mulig.
+Det ble også litt snakk om hvordan vi kunne effektivisere de ukentlige statusmøtene mest mulig.
+Med 16 arbeidsdager til rådighet og over 1,5 av de satt av til statusmøter blir det litt skjevt fordelt.
+Kom frem til at man gjør mest mulig på forhånd så møtene kun blir brukt til avklaringer. Diskusjoner tas i arbeidsgruppene.
+
+På slutten av dagen fikk jeg ekte data fra 360 så da kunne tfk-is-hemmelig-adresse ferdigstilles.
+I tillegg oppstod behovet for en ny modul som kunne trekke adressedata utfra en kontaktperson i 360.
+
 ## Web
 - Sort skrift på skjema
 - Fikset padding på innloggingsboksen
@@ -28,5 +37,6 @@ Oversatt fra kråketærne:
 - [roy](https://github.com/telemark/roy) Startet på beskrivelse og regelsett
 - [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) ble ferdig og publisert til [npm](https://www.npmjs.com/package/tfk-is-hemmelig-adresse)
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) ble opprettet
+- [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) ble opprettet
 
 [<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)
