--- a/blog/2016-01/2016-01-19.md
+++ b/blog/2016-01/2016-01-19.md
@@ -39,4 +39,4 @@ I tillegg oppstod behovet for en ny modul som kunne trekke adressedata utfra en 
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) ble opprettet
 - [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) ble opprettet
 
-[<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)
+[<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)  |  [20. januar 2016 ->](2016-01-20.md)
