--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -3,7 +3,9 @@
 ## Web
 
 ## Moduler
-- [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse
+- [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til npm
 - [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) oppdaterte beskrivelse
+- [tfk-dsf-unwrap-contact]() ble opprettet
+- [tfk-convert-contact]() ble opprettet
 
 [<- 19. januar 2016](2016-01-19.md)  |  [Forsiden](../index.md)
