--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -1,11 +1,15 @@
 # 20. januar 2016
 
+Kontaktinformasjon på personer finnes åpenbart i en rekke varianter i de ulike systemene våre. For å slippe å ha disse i hodet besluttet vi i dag å lage en modul som håndterer dette.
+I første omgang må den støtte SvarUT, Public360 og dsf. På sikt ser jeg for meg at vi legger inn de ulike variantene vi kommer over i fagsystemene også.
+
 ## Web
 
 ## Moduler
-- [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til npm
+- [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til [npm](https://www.npmjs.com/package/tfk-360-unwrap-contact)
 - [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) oppdaterte beskrivelse
-- [tfk-dsf-unwrap-contact]() ble opprettet
-- [tfk-convert-contact]() ble opprettet
+- [tfk-dsf-unwrap-contact](https://github.com/telemark/tfk-dsf-unwrap-contact) ble opprettet
+- [tfk-convert-contact](https://github.com/telemark/tfk-convert-contact) ble opprettet
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) la til [mississippi](https://www.npmjs.com/package/mississippi)
 
 [<- 19. januar 2016](2016-01-19.md)  |  [Forsiden](../index.md)
