--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -11,5 +11,7 @@ I første omgang må den støtte SvarUT, Public360 og dsf. På sikt ser jeg for 
 - [tfk-dsf-unwrap-contact](https://github.com/telemark/tfk-dsf-unwrap-contact) ble opprettet
 - [tfk-convert-contact](https://github.com/telemark/tfk-convert-contact) ble opprettet
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) la til [mississippi](https://www.npmjs.com/package/mississippi)
+- [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) la inn løsning for skolekoder og louie-add-case
+- [laurentius](https://github.com/telemark/laurentius) dytte louie-sak til 360
 
 [<- 19. januar 2016](2016-01-19.md)  |  [Forsiden](../index.md)
