--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -8,7 +8,7 @@ I første omgang må den støtte SvarUT, Public360 og dsf. På sikt ser jeg for 
 ## Moduler
 - [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til [npm](https://www.npmjs.com/package/tfk-360-unwrap-contact)
 - [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) oppdaterte beskrivelse
-- [tfk-dsf-unwrap-contact](https://github.com/telemark/tfk-dsf-unwrap-contact) ble opprettet
+- [tfk-dsf-unwrap-contact](https://github.com/telemark/tfk-dsf-unwrap-contact) ble opprettet, utviklet og publisert til [npm](https://www.npmjs.com/package/tfk-dsf-unwrap-contact)
 - [tfk-convert-contact](https://github.com/telemark/tfk-convert-contact) ble opprettet
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) la til [mississippi](https://www.npmjs.com/package/mississippi)
 - [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) la inn løsning for skolekoder og louie-add-case
