--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -3,7 +3,14 @@
 Kontaktinformasjon på personer finnes åpenbart i en rekke varianter i de ulike systemene våre. For å slippe å ha disse i hodet besluttet vi i dag å lage en modul som håndterer dette.
 I første omgang må den støtte SvarUT, Public360 og dsf. På sikt ser jeg for meg at vi legger inn de ulike variantene vi kommer over i fagsystemene også.
 
+Statusmøtet ble gjennomført på en knapp time i dag. Yay!
+En del tekst ble endret på kategoriene i web og navnet på systemet ble "Min elev". Utviklerteamet boikotter selvsagt dette. For oss er, blir og vil det alltid være: Louie.
+
+Oppdaget at det fine ikonene selvsagt ikke funket på MSIE. Da blir det litt sidespor for å få løst det i dag.
+
 ## Web
+- Endring av tekst i kategorier
+- Min elev lagt inn som navn
 
 ## Moduler
 - [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til [npm](https://www.npmjs.com/package/tfk-360-unwrap-contact)
