--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -11,6 +11,7 @@ Oppdaget at det fine ikonene selvsagt ikke funket på MSIE. Da blir det litt sid
 ## Web
 - Endring av tekst i kategorier
 - Min elev lagt inn som navn
+- Startet jobb med innlogging via LDAP
 
 ## Moduler
 - [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) la til beskrivelse, publiserte til [npm](https://www.npmjs.com/package/tfk-360-unwrap-contact)
