--- a/blog/2016-01/2016-01-20.md
+++ b/blog/2016-01/2016-01-20.md
@@ -22,4 +22,4 @@ Oppdaget at det fine ikonene selvsagt ikke funket på MSIE. Da blir det litt sid
 - [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) la inn løsning for skolekoder og louie-add-case
 - [laurentius](https://github.com/telemark/laurentius) dytte louie-sak til 360
 
-[<- 19. januar 2016](2016-01-19.md)  |  [Forsiden](../index.md)
+[<- 19. januar 2016](2016-01-19.md)  |  [Forsiden](../index.md)  |  [21. januar 2016 ->](2016-01-21.md)
