--- a/blog/2016-01/2016-01-21.md
+++ b/blog/2016-01/2016-01-21.md
@@ -21,4 +21,4 @@ Jakten på god løsning for LDAP fortsatte
 ## Moduler
 - [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) div oppdateringer og diskusjoner
 
-[<- 20. januar 2016](2016-01-20.md)  |  [Forsiden](../index.md)
+[<- 20. januar 2016](2016-01-20.md)  |  [Forsiden](../index.md)  |  [22. januar 2016 ->](2016-01-22.md)
