--- a/blog/2016-01/2016-01-22.md
+++ b/blog/2016-01/2016-01-22.md
@@ -1,5 +1,8 @@
 # 22. januar
 
+Startet dagen med videre arbeid på louie-web. 
+Først og fremst metoden som skal tygge data fra skjemaet og deretter dytte det videre til logg og kø.
+
 ## Web
 
 ## Moduler
