--- a/blog/2016-01/2016-01-21.md
+++ b/blog/2016-01/2016-01-21.md
@@ -6,17 +6,17 @@ Plutselig funket alt på MSIE i Citrix for meg, men ikke for alle andre. To be c
 
 Den opprinnelige planen var å starte på saksbehandling/Roy i dag. Men slik gikk det ikke. Ble en del forsøk med MSIE og så startet jeg like godt på docker-compose oppsettet.
 
-I en ideell verden ønsker vi at man skal kunne slippe unna med å sette et par miljøvariabler i docker-compose og så deretter bare ```docker-compose up```og ferdig i drift.
+I en ideell verden ønsker vi at man skal kunne slippe unna med å sette et par miljøvariabler i docker-compose og så deretter bare ```docker-compose up``` og ferdig i drift.
 Ender nok ikke _helt_ slik, men forhåpentligvis ikke så langt unna. Bruker MongoDB i logg og kø enn så lenge. På sikt kan det hende køen legges over på Redis e.l.
 
 Startet også på modulen som skal behandle skjemaet før det postes til kø og logg.
 
-Jakten på god løsning for LDAP fortsatte
+Jakten på god løsning for LDAP fortsatte.
 
 ## Web
 - Div MSIE fikser
 - docker-compose
-- forberede postt script
+- forberede post script
 
 ## Moduler
 - [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) div oppdateringer og diskusjoner
