--- a/blog/2016-01/2016-01-22.md
+++ b/blog/2016-01/2016-01-22.md
@@ -3,7 +3,11 @@
 Startet dagen med videre arbeid på louie-web. 
 Først og fremst metoden som skal tygge data fra skjemaet og deretter dytte det videre til logg og kø.
 
+Begynner å bli såpass langt inne i prosessen at de vanlige testene må på plass. Satt opp bygging på [Travis CI]()
+
 ## Web
+- Håndtering av innsendt skjema før logg/kø
+- Tester/Travis
 
 ## Moduler
 
