--- a/blog/2016-01/2016-01-22.md
+++ b/blog/2016-01/2016-01-22.md
@@ -3,11 +3,26 @@
 Startet dagen med videre arbeid på louie-web. 
 Først og fremst metoden som skal tygge data fra skjemaet og deretter dytte det videre til logg og kø.
 
-Begynner å bli såpass langt inne i prosessen at de vanlige testene må på plass. Satt opp bygging på [Travis CI]()
+Begynner å bli såpass langt inne i prosessen at de vanlige testene må på plass. 
+Satt opp bygging på [Travis CI](https://travis-ci.org/)
+
+Hadde en lengre runde om informasjonsflyt. Hvor kommer den fra og hvordan skal den se ut.
+Ble enige om en rekke feltnavn og ikke minst hvordan output fra Roy skal være.
+
+Fikk også løst en annen brysom utfordring: Hvordan distribuere varsler til personer med hemmelig adresse.
+Etter mange runder med mer eller mindre gode idéer landet vi til slutt på følgende:
+- Varsel produseres og arkiveres som vanlig
+- Det genereres internt notat med oppfølging i 360 med beskjed om at varsel må hentes i 360 og distribueres etter avtale
+
+Mot slutten av dagen ble det mest fokus på de viktigste delene av louie-web som gjenstår: LDAP, Buddy, logg og kø.
+Alt, unntatt Buddy, smalt på plass i dev-miljøet, men det gikk ikke fullt så enkelt i produksjon.
+Fortsetter problemene får folk klare seg ute Louie-web i helgen... er tross alt bare uke 1 ennå :-)
 
 ## Web
 - Håndtering av innsendt skjema før logg/kø
 - Tester/Travis
+- LDAP på plass
+- Klargjøring for resultat fra Buddy
 
 ## Moduler
 
