--- a/blog/2016-01/2016-01-22.md
+++ b/blog/2016-01/2016-01-22.md
@@ -26,4 +26,4 @@ Fortsetter problemene får folk klare seg ute Louie-web i helgen... er tross alt
 
 ## Moduler
 
-[<- 21. januar 2016](2016-01-21.md)  |  [Forsiden](../index.md)
+[<- 21. januar 2016](2016-01-21.md)  |  [Forsiden](../index.md)  |  [25. januar 2016 ->](2016-01-25.md)
