--- a/blog/2016-01/2016-01-25.md
+++ b/blog/2016-01/2016-01-25.md
@@ -2,9 +2,22 @@
 
 Uke 2 er i gang!
 
+Det er stabssamlig 2 dager denne uken så produksjonen blir naturlig nok noe lavere.
+
+Mål for dagen: 
+- Få opp LDAP i produksjonsmiljøet
+- Få til en fungerende førsteutgave av [tfk-saksbehandling-elev-varsel]
+- Få til en fungerende førsteutgave av [roy]
+
+Etter fredagens diskusjoner på hva som skal løses i hvilken modul startet dagen med litt tilbakerulling/endring i [louie-web].
+Det å koble informasjon og deretter sette den sammen til et format som kreves av andre moduler hører hjemme i saksbehandlingsmodulene.
+Dermed kan louie-web stort sett konsentrere seg om å bygge opp informasjonen som skal videre på en slik måte at det blir forståelig hva som ligger hvor bare ved å lese json-filen.
 
 
 ## Web
+- oppdaterte prepare-warning
+- oppdaterte testene
+- endret adferd til atferd
 
 ## Moduler
 
