--- a/blog/2016-01/2016-01-25.md
+++ b/blog/2016-01/2016-01-25.md
@@ -6,19 +6,29 @@ Det er stabssamlig 2 dager denne uken så produksjonen blir naturlig nok noe lav
 
 Mål for dagen: 
 - Få opp LDAP i produksjonsmiljøet
-- Få til en fungerende førsteutgave av [tfk-saksbehandling-elev-varsel]
-- Få til en fungerende førsteutgave av [roy]
+- Få til en fungerende førsteutgave av [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel)
+- Få til en fungerende førsteutgave av [roy](https://github.com/telemark/roy)
 
-Etter fredagens diskusjoner på hva som skal løses i hvilken modul startet dagen med litt tilbakerulling/endring i [louie-web].
+Etter fredagens diskusjoner på hva som skal løses i hvilken modul startet dagen med litt tilbakerulling/endring i [louie-web](https://github.com/telemark/louie-web).
 Det å koble informasjon og deretter sette den sammen til et format som kreves av andre moduler hører hjemme i saksbehandlingsmodulene.
 Dermed kan louie-web stort sett konsentrere seg om å bygge opp informasjonen som skal videre på en slik måte at det blir forståelig hva som ligger hvor bare ved å lese json-filen.
 
+Da vi satte opp saksbehandlingskjeden for skoleskyss hadde vi god erfaring med streams. Tenkte å fortsette i samme spor denne runden, men å skifte fra thru til mississippi.
+
+Kategoriene for de ulike gruppene ble landet i dag. Du kan ta de nærmere i øyensyn [her](https://github.com/telemark/louie-web/blob/master/docs/warning-categories.md). 
+Nå skal alle malene til språkvask hos Team kommunikasjon slik at det vi sender fra oss er klarest mulig for mottagerene.
+
+LDAP kom til sist på plass. Så nå benytter man sitt vanlige brukernavn/passord for å komme inn i løsningen.
+Problemet var i landskapet mellom docker-compose ENV variabler og config. 
 
 ## Web
 - oppdaterte prepare-warning
 - oppdaterte testene
 - endret adferd til atferd
+- oppdaterte kategoriene
+- LDAP på plass
 
 ## Moduler
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) første fungerende prototyp med mississippi
 
 [<- 22. januar 2016](2016-01-22.md)  |  [Forsiden](../index.md)
