--- a/blog/2016-01/2016-01-25.md
+++ b/blog/2016-01/2016-01-25.md
@@ -30,5 +30,6 @@ Problemet var i landskapet mellom docker-compose ENV variabler og config.
 
 ## Moduler
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) første fungerende prototyp med mississippi
+- [roy](https://github.com/telemark/roy) første fungerende prototyp med mississippi
 
 [<- 22. januar 2016](2016-01-22.md)  |  [Forsiden](../index.md)
