--- a/blog/2016-01/2016-01-25.md
+++ b/blog/2016-01/2016-01-25.md
@@ -19,7 +19,12 @@ Kategoriene for de ulike gruppene ble landet i dag. Du kan ta de nærmere i øye
 Nå skal alle malene til språkvask hos Team kommunikasjon slik at det vi sender fra oss er klarest mulig for mottagerene.
 
 LDAP kom til sist på plass. Så nå benytter man sitt vanlige brukernavn/passord for å komme inn i løsningen.
-Problemet var i landskapet mellom docker-compose ENV variabler og config. 
+Problemet var i landskapet mellom docker-compose ENV variabler og config.
+
+Nå gjenstår kun buddy-biten før vi har en fungerende produksjonsbit på plass. 
+Den vil ikke inneholde alt man har sett for seg, men dette er kun første del så det må være greit.
+Går alt etter planen vil louie får et par måneder i produksjon før vi satrter på fase 2.
+Det vil være verdifull erfaring å ha med seg.
 
 ## Web
 - oppdaterte prepare-warning
@@ -31,5 +36,6 @@ Problemet var i landskapet mellom docker-compose ENV variabler og config.
 ## Moduler
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) første fungerende prototyp med mississippi
 - [roy](https://github.com/telemark/roy) første fungerende prototyp med mississippi
+- [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) startet på elevsøk
 
 [<- 22. januar 2016](2016-01-22.md)  |  [Forsiden](../index.md)
