--- a/blog/2016-01/2016-01-08.md
+++ b/blog/2016-01/2016-01-08.md
@@ -1,6 +1,43 @@
 # 08. Januar 2016
+I dag er den offisielle starten for prosjektet som skal levere en løsning klar for å tas i bruk etter vinterferien.
 
-I dag var det gevinstverksted/arbeidsprosessanalyse for Louie.
-Det var forsåvidt også starten på prosjektet som skal være i produksjon etter vinterferien.
+Utfordringen som ligger foran oss er en bedre måte å håndtere varsler til elever i den videregående skole.
+Dersom man står i fare for å få nedsatt karakter, eller ikke å få karakter i det hele tatt har man krav på å motta et skriftlig varsel tidsnok til å kunne rette opp (hvis mulig).
+Det er en antagelse om at det mulig å forbedre måten å gjøre dette på.
+
+## Gevinstverksted
+Det var en godt sammensatt gruppe som var deltagere på gevinstverkstedet i dag.
+- 1 lærer fra videregående skole
+- 1 fagforeningsrepresentant med lærerbakgrunn
+- 1 arkivansatt med bakgrunn fra arkiv på videregående skole
+- 1 prosjektleder
+- 1 fasilitator
+- 2 utviklere
+
+Er svært fornøyd med at vi som utviklere fikk være med på dette. I forrige prosjekt ([Skoleskyss]()) ble vi sittende litt på sidelinjen.
+Våre innspill etter den prosessen er at vi må være med på gevinstverkstedene og de involverte må være tilstede eller ha mye tettere kontakt med oss under utvikling testing.
+Dette er ikke nye tanker, men det er bra det ble tatt til etteretning likevel.
+
+Et gevinstverksted er en kartlegging av arbeidsprosessesser. Med en rull gråpapir og post-it lapper identifiserer man alt arbeid som blir gjort og hvem som gjør det.
+Er det spesielle utfordringer på et punkt noteres det ned. Alle involverte skal med, både avsendere og mottagere.
+
+Etter at alt var ferdig var det enkelt å se et par åpenbare forbedringsmuligheter. En del var i forbindelse med hendelser før et varsel i det hele tatt oppstår, men det er utenfor scopet av dette prosjektet.
+Litt forenklet kan man si at varselet skal gjennom 3 faser.
+- Produksjon (varselet blir skrevet)
+- Distribusjon (varselet sendes til de som skal ha det)
+- Arkivering
+
+Tidsmessig er det ikke så mye å hente på produksjon. I alle fall ikke får man tar tak i alt som ligger i forkant av et varsel.
+
+Distribusjon og arkivering var derimot gode kandidater for automatisering og innsparing av tid. 
+Hvert varsel kunne gi 30 - 60 minutters manuelt arbeid i disse to leddene. Vi sender 7500 varsler pr år.
+
+## Veien videre
+Varslene skrives i dag i Fronter. Vi kunne tenke oss at man fortsatte med det og så konsentrere oss om å utvikle løsninger for distribusjon og arkivering.
+
+
+Finner ut at modulen for distribusjon må hete Roy. Oppkalt etter postmannen Roy Amundsen i den fantastiske filmen Budbringeren.
+
+Arkivmodulen får navnet Laurentius. Arkivarenes helgen.
 
 [Forsiden](../index.md)  |  [11. januar 2016 ->](2016-01-11.md)
