--- a/blog/2016-01/2016-01-08.md
+++ b/blog/2016-01/2016-01-08.md
@@ -36,8 +36,8 @@ Hvert varsel kunne gi 30 - 60 minutters manuelt arbeid i disse to leddene. Vi se
 Varslene skrives i dag i Fronter. Vi kunne tenke oss at man fortsatte med det og så konsentrere oss om å utvikle løsninger for distribusjon og arkivering.
 
 
-Finner ut at modulen for distribusjon må hete Roy. Oppkalt etter postmannen Roy Amundsen i den fantastiske filmen Budbringeren.
+Finner ut at modulen for distribusjon må hete [Roy](https://github.com/telemark/roy). Oppkalt etter postmannen Roy Amundsen i den fantastiske filmen Budbringeren.
 
-Arkivmodulen får navnet Laurentius. Arkivarenes helgen.
+Arkivmodulen får navnet [Laurentius](https://github.com/telemark/laurentius). Arkivarenes helgen.
 
 [Forsiden](../index.md)  |  [11. januar 2016 ->](2016-01-11.md)
