--- a/blog/2016-01/2016-01-28.md
+++ b/blog/2016-01/2016-01-28.md
@@ -8,8 +8,17 @@ Planen i dag er å ferdigstille [louie-web](https://github.com/telemark/louie-we
 I tillegg må det på plass et api for å hente varsler ut av køen og for å poste statusoppdateringer av sendte varsler til loggen.
 Elevsøk mot Buddy er også ønsket, men der har vi en dummy-løsning på plass enn så lenge så man skal kunne teste all funksjon i systemet uten reelle data.
 
+Kom på at det kanskje kunne være behov for en hjelpeside selv om vi har gjort systemet mest mulig "selvforklarende". 
+La inn en svært enkel utgave som strengt tatt kun er forklaringer av ikonene.
+
+Det ble lagt inn en side for filtrering/søk av alle loggen. 
+I v1 er dette ikke prioritert siden man skal kunne ta ut rapporter fra Public360 så den viser i første omgang kun det samme som aktivitetsloggen på forsiden.
+Blir det tid til overs kan vi utvide den.
+
 ## Web
 - Forhåndsvisning av varsler
+- Hjelpeside
+- Loggside
 
 ## Moduler
 
