--- a/blog/2016-01/2016-01-28.md
+++ b/blog/2016-01/2016-01-28.md
@@ -15,10 +15,13 @@ Det ble lagt inn en side for filtrering/søk av alle loggen.
 I v1 er dette ikke prioritert siden man skal kunne ta ut rapporter fra Public360 så den viser i første omgang kun det samme som aktivitetsloggen på forsiden.
 Blir det tid til overs kan vi utvide den.
 
+Laget enkel filtrering av loggen fra søkeresultatsiden. Trykk på en knapp for å se aktivitetslogg kun for en elev.
+
 ## Web
 - Forhåndsvisning av varsler
 - Hjelpeside
 - Loggside
+- Enkel filtrering av logg
 
 ## Moduler
 
