--- a/blog/2016-01/2016-01-28.md
+++ b/blog/2016-01/2016-01-28.md
@@ -17,11 +17,14 @@ Blir det tid til overs kan vi utvide den.
 
 Laget enkel filtrering av loggen fra søkeresultatsiden. Trykk på en knapp for å se aktivitetslogg kun for en elev.
 
+Fikk på plass enkel validering av varselskjemaet. Sende-knappen er disabled helt til alle nødvendige valg er krysset av.
+
 ## Web
 - Forhåndsvisning av varsler
 - Hjelpeside
 - Loggside
 - Enkel filtrering av logg
+- Validering av varslingsskjema
 
 ## Moduler
 
