--- a/blog/2016-01/2016-01-28.md
+++ b/blog/2016-01/2016-01-28.md
@@ -19,13 +19,23 @@ Laget enkel filtrering av loggen fra søkeresultatsiden. Trykk på en knapp for 
 
 Fikk på plass enkel validering av varselskjemaet. Sende-knappen er disabled helt til alle nødvendige valg er krysset av.
 
+Et svært forenklet API ble implementert. Som følge av det ble det gjort noen endringer i hvordan loggen benyttes.
+Vi forutsetter at det ligger en dokumentdatabase i bunnen og dermed ble det mer naturlig å ha statusene som en liste under hvert dokument.
+
+Helt på tampen landet et fungerende testsøk mot elever i Buddy også. Knalldag :-)
+
 ## Web
 - Forhåndsvisning av varsler
 - Hjelpeside
 - Loggside
 - Enkel filtrering av logg
 - Validering av varslingsskjema
+- Implementert API for logg
+- Implementert API for kø
+- Implementert cache via søk
+- Implementert søk mot buddy-webservice
 
 ## Moduler
+[tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) fungerende testsøk mot elever
 
 [<- 25. januar 2016](2016-01-25.md)  |  [Forsiden](../index.md)
