--- a/blog/2016-01/2016-01-28.md
+++ b/blog/2016-01/2016-01-28.md
@@ -22,7 +22,12 @@ Fikk på plass enkel validering av varselskjemaet. Sende-knappen er disabled hel
 Et svært forenklet API ble implementert. Som følge av det ble det gjort noen endringer i hvordan loggen benyttes.
 Vi forutsetter at det ligger en dokumentdatabase i bunnen og dermed ble det mer naturlig å ha statusene som en liste under hvert dokument.
 
-Helt på tampen landet et fungerende testsøk mot elever i Buddy også. Knalldag :-)
+Helt på tampen landet et fungerende testsøk mot elever i Buddy også.
+
+En liten klabb i fjeset helt mot slutten av dagen: ikke funnet en god måte å sjekke om en underviser er kontaktlærer for en gitt gruppe elever.
+Underviseren er kontaktlærer... men vi vet ikke for hvem.
+
+Men, men alt i alt en knalldag likevel :-)
 
 ## Web
 - Forhåndsvisning av varsler
@@ -38,4 +43,4 @@ Helt på tampen landet et fungerende testsøk mot elever i Buddy også. Knalldag
 ## Moduler
 [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) fungerende testsøk mot elever
 
-[<- 25. januar 2016](2016-01-25.md)  |  [Forsiden](../index.md)
+[<- 25. januar 2016](2016-01-25.md)  |  [Forsiden](../index.md)  |  [29. januar 2016 ->](2016-01-29.md)
