--- a/blog/2016-01/2016-01-29.md
+++ b/blog/2016-01/2016-01-29.md
@@ -1,5 +1,20 @@
 # 29. januar 2016
 
+I dag skal det være statusmøte med hele prosjektgruppen.
+Utover å gjennomgå hvordan vi ligger an i forhold til tid og oppgaver som skal løses håper jeg på et par endelige avklaringer.
+- Maler for varselbrev og notat må godkjennes
+- Arbeidsflyt/saksgang i [louie-web]() må godkjennes
+- Forenklet forhåndsvisning må godkjennes
+
+Ellers håper jeg å få ferdig alle funksjoner i webløsningen i løpet av dagen. Da kan neste uke brukes kun på distribusjons- og arkiveringsleddet.
+Evt visuell finpuss av webløsningen får vente helt til slutt. Det som gjenstår av funksjoner såvidt jeg kan se er
+- Validering av innloggingsskjema (begge felt må fylles ut)
+- Tilbakemelding ved feil brukernavn eller passord
+- Tilbakemelding om søket etter elev ikke gir resultat
+- Tilbakemelding om filtrering av loggen ikke gir resultat
+- Tilbakemelding om man ikke har varsler i forsideloggen
+- Hyperkort forklaring på forsiden (eh.. ikke akkurat funksjon, men den mangler)
+
 ## Web
 
 ## Moduler
