--- a/blog/2016-01/2016-01-08.md
+++ b/blog/2016-01/2016-01-08.md
@@ -27,13 +27,15 @@ Litt forenklet kan man si at varselet skal gjennom 3 faser.
 - Distribusjon (varselet sendes til de som skal ha det)
 - Arkivering
 
-Tidsmessig er det ikke så mye å hente på produksjon. I alle fall ikke får man tar tak i alt som ligger i forkant av et varsel.
+Tidsmessig er det ikke så mye å hente på produksjon. 
+I alle fall ikke før man tar tak i alt som ligger i forkant av et varsel.
 
 Distribusjon og arkivering var derimot gode kandidater for automatisering og innsparing av tid. 
 Hvert varsel kunne gi 30 - 60 minutters manuelt arbeid i disse to leddene. Vi sender 7500 varsler pr år.
 
 ## Veien videre
-Varslene skrives i dag i Fronter. Vi kunne tenke oss at man fortsatte med det og så konsentrere oss om å utvikle løsninger for distribusjon og arkivering.
+Varslene skrives i dag i Fronter. 
+Vi kunne tenke oss at man fortsatte med det og så konsentrere oss om å utvikle løsninger for distribusjon og arkivering.
 
 Finner ut at modulen for distribusjon må hete [Roy](https://github.com/telemark/roy). Oppkalt etter postmannen Roy Amundsen i den fantastiske filmen Budbringeren.
 
