--- a/blog/2016-01/2016-01-11.md
+++ b/blog/2016-01/2016-01-11.md
@@ -1,9 +1,15 @@
-# 11 januar 2016
+# 11. januar 2016
 
-Oppsummeringsmøte av gevinstverkstedet.
+I dag var det oppsummering av gevinstverkstedet.
+I tillegg til å kvalitetssikre at alle faser og utfordringer var tatt med i verkstedet, ble det også satt opp en oversikt over ønsket situasjon.
+
+Utviklerdelen av gruppen er fortsatt begeistret for å bruke Fronter i produksjonsleddet.
+Det sparer oss for å måtte forholde oss til autentisering, roller, webgrensesnitt osv.
+Det vil også spare brukerne for å måtte lære seg et nytt system. De bare fortsetter å gjøre det slik de alltid har gjort.
 
 Sender mail til Fronter hvor vi spør om det er mulig å får varslene ut derfra via API eller trigger.
-Får svar sent på kvelden at det ikke finnes API eller trigger for noe slikt.
+
+Får svar sent på kvelden fra Fronter at det ikke finnes API eller trigger for noe slikt.
 
 ## Moduler
 - Forker [form-data](https://github.com/telemark/form-data)
