--- a/blog/2016-01/2016-01-12.md
+++ b/blog/2016-01/2016-01-12.md
@@ -1,5 +1,7 @@
 # 12. januar 2016
 
+Vi tviholder på Fronter-sporet selv om det ble en form for avslag i går.
+
 Sender ny mail til Fronter og spør om hva det vil kostet å få laget en slik løsning vi ønsker oss.
 Det vil si at vi henter ut produserte varsler via API, eller at det lages en trigger som dytter data inn til vårt distribusjonsledd.
 
