--- a/blog/2016-01/2016-01-29.md
+++ b/blog/2016-01/2016-01-29.md
@@ -3,7 +3,7 @@
 I dag skal det være statusmøte med hele prosjektgruppen.
 Utover å gjennomgå hvordan vi ligger an i forhold til tid og oppgaver som skal løses håper jeg på et par endelige avklaringer.
 - Maler for varselbrev og notat må godkjennes
-- Arbeidsflyt/saksgang i [louie-web]() må godkjennes
+- Arbeidsflyt/saksgang i [louie-web](https://github.com/telemark/louie-web) må godkjennes
 - Forenklet forhåndsvisning må godkjennes
 
 Ellers håper jeg å få ferdig alle funksjoner i webløsningen i løpet av dagen. Da kan neste uke brukes kun på distribusjons- og arkiveringsleddet.
@@ -14,6 +14,28 @@ Evt visuell finpuss av webløsningen får vente helt til slutt. Det som gjenstå
 - Tilbakemelding om filtrering av loggen ikke gir resultat
 - Tilbakemelding om man ikke har varsler i forsideloggen
 - Hyperkort forklaring på forsiden (eh.. ikke akkurat funksjon, men den mangler)
+
+## Statusmøte
+I dag hadde vi også med oss en kommunikasjonsrådgiver. 
+Mitt drømmeønske: heretter er det kommunikasjonsfolk med fra dag 1. 
+I likhet med utviklere er dette kompetanse som bør være tilstede hele veien.
+
+Ble kort snakk om navnekonkurransen. MinElev leder, men det hele avgjøres på mandag.
+Ang Louie får jeg nesten skrive en lang avhandling om det begrepet en annen gang :-)
+
+Lanseringsdag er fortsatt 29. februar. Ingen grunn til at det blir utsatt ... ennå
+
+Så var det gjennomgang av alle gjenstående oppgaver i Prosjektveiviseren. 
+Fantastisk meningsløst at oppgaver som krysses av som utført ikke fjernes i visningen
+
+Ble snakk om tidsfrister og når vi går i test/pilot. Enn så lenge tenker vi en liten test med ekte varsler neste fredag.
+
+Åpner sannsynligvis testløsning for alle på førstkommende mandag.
+
+Kontaktlærerhodepinen i Buddy ble tatt opp.
+
+## Resten av dagen
+
 
 ## Web
 
