--- a/blog/2016-01/2016-01-29.md
+++ b/blog/2016-01/2016-01-29.md
@@ -36,9 +36,17 @@ Kontaktlærerhodepinen i Buddy ble tatt opp.
 
 ## Resten av dagen
 
+Dukket opp en løsning på Buddy.
+
+Fikk på plass validering av loginskjemaet og feilmelding ved galt brukernavn eller passord.
 
 ## Web
+- Validerer login (sjekker at det er innhold i begge feltene)
+- Oppdaterte diverse kategoritekster
+- Oppdaterte forhåndsvisningen
+- La inn bedre hjelpetekst ved feil brukernavn/passord
 
 ## Moduler
+
 
 [<- 28. januar 2016](2016-01-28.md)  |  [Forsiden](../index.md)
