--- a/blog/2016-01/2016-01-29.md
+++ b/blog/2016-01/2016-01-29.md
@@ -45,8 +45,9 @@ Fikk på plass validering av loginskjemaet og feilmelding ved galt brukernavn el
 - Oppdaterte diverse kategoritekster
 - Oppdaterte forhåndsvisningen
 - La inn bedre hjelpetekst ved feil brukernavn/passord
+- Oppdaterte søket slik at lærer kun får sine elever
 
 ## Moduler
-
+- [tfk-buddy-api]() kontaktlærer på plass
 
 [<- 28. januar 2016](2016-01-28.md)  |  [Forsiden](../index.md)
