--- a/blog/2016/01/2016-01-08.md
+++ b/blog/2016/01/2016-01-08.md
@@ -41,4 +41,4 @@ Finner ut at modulen for distribusjon må hete [Roy](https://github.com/telemark
 
 Arkivmodulen får navnet [Laurentius](https://github.com/telemark/laurentius). Arkivarenes helgen.
 
-[Forsiden](../index.md)  |  [11. januar 2016 ->](2016-01-11.md)
+[Forsiden](../../index.md)  |  [11. januar 2016 ->](2016-01-11.md)
