--- a/blog/2016/01/2016-01-12.md
+++ b/blog/2016/01/2016-01-12.md
@@ -14,4 +14,4 @@ Om det skal være mulig å komme i mål må vi skrelle alt helt inn til benet.
 ## Moduler
 - [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) ble opprettet
 
-[<- 11. januar 2016](2016-01-11.md)  |  [Forsiden](../index.md)  |  [13. januar 2016 ->](2016-01-13.md)
+[<- 11. januar 2016](2016-01-11.md)  |  [Forsiden](../../index.md)  |  [13. januar 2016 ->](2016-01-13.md)
