--- a/blog/2016/01/2016-01-15.md
+++ b/blog/2016/01/2016-01-15.md
@@ -11,4 +11,4 @@ Ville jo være uhøflig å ikke gi gjestene noe å gjøre så han fikk i oppgave
  
 
 
-[<- 14. januar 2016](2016-01-14.md)  |  [Forsiden](../index.md)  |  [18. januar 2016 ->](2016-01-18.md)
+[<- 14. januar 2016](2016-01-14.md)  |  [Forsiden](../../index.md)  |  [18. januar 2016 ->](2016-01-18.md)
