--- a/blog/2016/01/2016-01-19.md
+++ b/blog/2016/01/2016-01-19.md
@@ -12,7 +12,7 @@ Prøver å få til litt tavletid med @maccyber så vi kan tegne opp løpet for v
 
 Tavletid unnagjort
 
-![Tavletid!](../images/2016-01-19-plan.jpg)
+![Tavletid!](../../images/2016-01-19-plan.jpg)
 
 Oversatt fra kråketærne:
 - Roy og Laurentius blir separate moduler
@@ -39,4 +39,4 @@ I tillegg oppstod behovet for en ny modul som kunne trekke adressedata utfra en 
 - [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) ble opprettet
 - [tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact) ble opprettet
 
-[<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../index.md)  |  [20. januar 2016 ->](2016-01-20.md)
+[<- 18. januar 2016](2016-01-18.md)  |  [Forsiden](../../index.md)  |  [20. januar 2016 ->](2016-01-20.md)
