--- a/blog/2016/01/2016-01-25.md
+++ b/blog/2016/01/2016-01-25.md
@@ -38,4 +38,4 @@ Det vil være verdifull erfaring å ha med seg.
 - [roy](https://github.com/telemark/roy) første fungerende prototyp med mississippi
 - [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) startet på elevsøk
 
-[<- 22. januar 2016](2016-01-22.md)  |  [Forsiden](../index.md)  |  [28. januar 2016 ->](2016-01-28.md)
+[<- 22. januar 2016](2016-01-22.md)  |  [Forsiden](../../index.md)  |  [28. januar 2016 ->](2016-01-28.md)
