--- a/blog/2016/01/2016-01-28.md
+++ b/blog/2016/01/2016-01-28.md
@@ -43,4 +43,4 @@ Men, men alt i alt en knalldag likevel :-)
 ## Moduler
 [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) fungerende testsøk mot elever
 
-[<- 25. januar 2016](2016-01-25.md)  |  [Forsiden](../index.md)  |  [29. januar 2016 ->](2016-01-29.md)
+[<- 25. januar 2016](2016-01-25.md)  |  [Forsiden](../../index.md)  |  [29. januar 2016 ->](2016-01-29.md)
