--- a/blog/2016/01/2016-01-11.md
+++ b/blog/2016/01/2016-01-11.md
@@ -15,4 +15,4 @@ Får svar sent på kvelden fra Fronter at det ikke finnes API eller trigger for 
 - Forker [form-data](https://github.com/telemark/form-data)
 - [tfk-is-hemmelig-adresse](https://github.com/telemark/tfk-is-hemmelig-adresse) opprettes
 
-[<- 08. januar 2016](2016-01-08.md)  |  [Forsiden](../index.md)  |  [12. januar 2016 ->](2016-01-12.md)
+[<- 08. januar 2016](2016-01-08.md)  |  [Forsiden](../../index.md)  |  [12. januar 2016 ->](2016-01-12.md)
