--- a/blog/2016/01/2016-01-14.md
+++ b/blog/2016/01/2016-01-14.md
@@ -13,4 +13,4 @@ Tanken er at dette skal gjøre det enklere å diskutere omkring saksgang og funk
 
 ## Moduler
 
-[<- 13. januar 2016](2016-01-13.md)  |  [Forsiden](../index.md)  |  [15. januar 2016 ->](2016-01-15.md)
+[<- 13. januar 2016](2016-01-13.md)  |  [Forsiden](../../index.md)  |  [15. januar 2016 ->](2016-01-15.md)
