--- a/blog/2016/01/2016-01-18.md
+++ b/blog/2016/01/2016-01-18.md
@@ -16,4 +16,4 @@ Endelig løsning: Fikse Dockerfile så den installerer Git som en del av oppgave
 ## Moduler
 - tfk-is-hemmelig-adresse nesten ferdig
 
-[<- 15. januar 2016](2016-01-15.md)  |  [Forsiden](../index.md)  |  [19. januar 2016 ->](2016-01-19.md)
+[<- 15. januar 2016](2016-01-15.md)  |  [Forsiden](../../index.md)  |  [19. januar 2016 ->](2016-01-19.md)
