--- a/blog/2016/01/2016-01-29.md
+++ b/blog/2016/01/2016-01-29.md
@@ -50,4 +50,4 @@ Fikk på plass validering av loginskjemaet og feilmelding ved galt brukernavn el
 ## Moduler
 - [tfk-buddy-api]() kontaktlærer på plass
 
-[<- 28. januar 2016](2016-01-28.md)  |  [Forsiden](../index.md)
+[<- 28. januar 2016](2016-01-28.md)  |  [Forsiden](../../index.md)  |  [01. februar 2016 ->](../02/2016-02-01.md)
