--- a/blog/2016/02/2016-02-01.md
+++ b/blog/2016/02/2016-02-01.md
@@ -12,8 +12,23 @@ Her er en liten sniktitt på forsiden
 
 ![MinElev forsiden!](../../images/2016/02/MinElev.forsiden.test.png)
 
+Ellers gikk det meste av dagen i dag med til saksbehandlermodulen og testing maler.
+
+Vi har egentlig tenkt at selve genereringen av varselbrevene skal foregå i [Roy]() men for å få testet ting fortløpenede laget jeg oppsettet i saksbehandleren i dag.
+
+De første testene ser ut til å ha gått svært greit.
+
 ## web
+- hjelpetekster
+- visuelle forbedringer
+- oppsett av testside
 
 ## moduler
+[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppdaterte maler
+[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) dokumentasjon av malkoder
+[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppsett av data til maler
+[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) test av malgenerering
+[laurentius]
+[tfk-metadata-generator]
 
 [<- 29. januar 2016](../01/2016-01-29.md)  |  [Forsiden](../../index.md)
