--- a/blog/2016/02/2016-02-01.md
+++ b/blog/2016/02/2016-02-01.md
@@ -14,9 +14,16 @@ Her er en liten sniktitt på forsiden
 
 Ellers gikk det meste av dagen i dag med til saksbehandlermodulen og testing maler.
 
-Vi har egentlig tenkt at selve genereringen av varselbrevene skal foregå i [Roy]() men for å få testet ting fortløpenede laget jeg oppsettet i saksbehandleren i dag.
+Vi har egentlig tenkt at selve genereringen av varselbrevene skal foregå i [Roy](https://github.com/telemark/roy) men for å få testet ting fortløpenede laget jeg oppsettet i saksbehandleren i dag.
 
 De første testene ser ut til å ha gått svært greit.
+
+Det ble også gjort en del endringer i [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api)
+
+MSIE-problemet er sannsynligvis løst. Dvs vi fant årsaken til det. Tfks oppsett i grupperettigheter er at alle *.t-fk.no-adresser anses som intranett.
+Intranett er satt opp til å bruke kompatibilitetsmodus. En grusom mulighet som har reddet mang en tvilsomt utviklet nettside tidligere ;-)
+Vi har meldt det inn til IT og satser på at de finner en løsning.
+
 
 ## web
 - hjelpetekster
@@ -28,7 +35,8 @@ De første testene ser ut til å ha gått svært greit.
 [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) dokumentasjon av malkoder
 [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppsett av data til maler
 [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) test av malgenerering
-[laurentius]
-[tfk-metadata-generator]
+[laurentius](https://github.com/telemark/laurentius)
+[tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator)
+[tfk-buddy-api](https://github.com/telemark/tfk-buddy-api)
 
 [<- 29. januar 2016](../01/2016-01-29.md)  |  [Forsiden](../../index.md)
