--- a/blog/2016/02/2016-02-01.md
+++ b/blog/2016/02/2016-02-01.md
@@ -39,4 +39,4 @@ Vi har meldt det inn til IT og satser på at de finner en løsning.
 [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator)
 [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api)
 
-[<- 29. januar 2016](../01/2016-01-29.md)  |  [Forsiden](../../index.md) [<- 02. februar 2016 ->](2016-02-01.md)
+[<- 29. januar 2016](../01/2016-01-29.md)  |  [Forsiden](../../index.md) [02. februar 2016 ->](2016-02-02.md)
