--- a/blog/2016/02/2016-02-02.md
+++ b/blog/2016/02/2016-02-02.md
@@ -28,4 +28,4 @@ Likevel er det mange linjer kode som skal på plass så vi trenger tiden vi har 
 
 ## Moduler
 
-[<- 02. februar 2016](2016-02-01.md)  |  [Forsiden](../../index.md)
+[<- 01. februar 2016](2016-02-01.md)  |  [Forsiden](../../index.md) [03. februar 2016 ->](2016-02-03.md)
